--- a/js/package.json
+++ b/js/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "watch": "npm test --watch",	
     "lint": "npx eslint --fix . --ext ts"
   },
   "author": "",
